<resources>
    <string name="app_name">CoffeShop_App</string>
    <string name="buy_now">Buy Now</string>
    <string name="_4_53">$ 4.53</string>
    <string name="price">Price</string>
    <string name="l">L</string>
    <string name="size">Size</string>
    <string name="ice_hot">Ice/Hot</string>
    <string name="caffe_mocha">Caffe Mocha</string>
    <string name="detail">Detail</string>
    <string name="_9_41">9:41</string>
    <string name="battery">Battery</string>
    <string name="wifi">WiFi</string>
    <string name="signal">Signal</string>
    <string name="back">Back</string>
    <string name="favorite">favorite</string>
    <string name="coffe_image">Coffe_Image</string>
    <string name="delivery_btn">Delivery_Btn</string>
    <string name="coffee_bean">Coffee Bean</string>
    <string name="milk">Milk</string>
    <string name="star">Star</string>
    <string name="_4_8">4.8</string>
    <string name="_230">(230)</string>
    <string name="description">Description</string>
    <string name="a_cappuccino_is_an_approximately_150_ml_5_oz_beverage_with_25_ml_of_espresso_coffee_and_85ml_of_fresh_milk_the_for">A cappuccino is an approximately 150 ml (5 oz) beverage, with 25 ml of espresso coffee and 85ml of fresh milk the for...</string>
    <string name="read_more">Read More</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="back_order">Back</string>
    <string name="order">Order</string>
    <string name="deliver">Deliver</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="jl_kpg_sutoyo">Jl. Kpg Sutoyo</string>
    <string name="kpg_sutoyo_no_620_bilzen_tanjungbalai">Kpg. Sutoyo No. 620, Bilzen, Tanjungbalai.</string>
    <string name="edit_address">Edit Address</string>
    <string name="add_note">Add Note</string>
    <string name="coffee">Coffee</string>
    <string name="caffe_mocha_order">Caffe Mocha</string>
    <string name="deep_foam">Deep Foam</string>
    <string name="decrease">Decrease</string>
    <string name="_1">1</string>
    <string name="increase">Increase</string>
    <string name="discount">Discount</string>
    <string name="_1_discount_is_applies">1 Discount is Applies</string>
    <string name="arrow">Arrow</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="price_order">Price</string>
    <string name="dollar_4_53">$ 4.53</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="_2_0">$ 2.0</string>
    <string name="_1_0">$ 1.0</string>
    <string name="wallet">Wallet</string>
    <string name="cash_wallet">Cash/Wallet</string>
    <string name="_5_53">$ 5.53</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_our_cozy_coffee_corner_where_every_cup_is_a_delightful_for_you">Welcome to our cozy coffee corner, where every cup is a delightful for you.</string>
    <string name="fall_in_love_with_coffee_in_blissful_delight">Fall in Love with Coffee in Blissful Delight!</string>
    <string name="imageviewbcoffeimage">imageviewbcoffeimage</string>
    <string name="wifidescription">wifidescription</string>
    <string name="batterydescription">batterydescription</string>
    <string name="_9_20">9:20</string>
    <string name="map">Map</string>
    <string name="back_activity">Back</string>
    <string name="settings">Settings</string>
    <string name="_10_minutes_left">10 minutes left</string>
    <string name="delivery_to">Delivery to</string>
    <string name="delivery">Delivery</string>
    <string name="delivered_your_order">Delivered your order</string>
    <string name="we_will_deliver_your_goods_to_you_in_the_shortest_possible_time">We will deliver your goods to you in the shortest possible time.</string>
    <string name="courier">Courier</string>
    <string name="brooklyn_simmons">Brooklyn Simmons</string>
    <string name="call">Call</string>
    <string name="personal_courier">Personal Courier</string>
    <string name="location">Location</string>
    <string name="bilzen_tanjungbalai">Bilzen, Tanjungbalai</string>
    <string name="dropdown">Dropdown</string>
    <string name="search">Search</string>
    <string name="search_coffee">Search coffee</string>
    <string name="filter">Filter</string>
    <string name="promo_banner">Promo Banner</string>
    <string name="promo">Promo</string>
    <string name="buy_one_get_one_free">Buy one get one FREE</string>
    <string name="all_coffee">All Coffee</string>
    <string name="machiato">Machiato</string>
    <string name="latte">Latte</string>
    <string name="americano">Americano</string>
    <string name="rating">Rating</string>
    <string name="add">Add</string>
    <string name="flat_white">Flat White</string>
    <string name="espresso">Espresso</string>
    <string name="_3_53">$ 3.53</string>
    <string name="cappuchino">Cappuchino</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notifications</string>
</resources>