<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">


        <!-- Top Bar -->
        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                android:contentDescription="@string/back"
                android:src="@drawable/stroke_main" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center" />

            <ImageButton
                android:id="@+id/btnFavorite"
                android:contentDescription="@string/favorite"
                android:src="@drawable/heart_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerInside" />
        </LinearLayout>

        <!-- Coffee Image Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgCoffee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/coffe_image"
                android:scaleType="centerCrop"
                android:src="@drawable/coffe_below" />
        </androidx.cardview.widget.CardView>

        <!-- Coffee Name -->

        <!-- Coffee Type -->

        <TextView
            android:id="@+id/tvCoffeeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/caffe_mocha"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iconButtons"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCard" />

        <TextView
            android:id="@+id/tvCoffeeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/ice_hot"
            android:textSize="16sp"
            android:textColor="#999999"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCoffeeName" />

        <!-- Icon Buttons -->

        <!-- Rating -->

        <LinearLayout
            android:id="@+id/iconButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/tvCoffeeType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvCoffeeName"
            app:layout_constraintVertical_bias="1.0">

            <ImageButton
                android:id="@+id/btnDelivery"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/delivery_btn"
                android:scaleType="centerInside"
                android:src="@drawable/motorbike"
                android:tint="#C67C4E"
                tools:ignore="UseAppTint" />

            <ImageButton
                android:id="@+id/btnBean"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/coffee_bean"
                android:scaleType="centerInside"
                android:src="@drawable/beans"
                android:tint="#C67C4E"
                tools:ignore="UseAppTint" />

            <ImageButton
                android:id="@+id/btnMilk"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/milk"
                android:scaleType="centerInside"
                android:src="@drawable/milk_packaging"
                android:tint="#C67C4E"
                tools:ignore="UseAppTint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratingLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCoffeeType">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:contentDescription="@string/star"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_4_8"
                android:textSize="14sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRatingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_230"
                android:textSize="12sp"
                android:textColor="#999999" />
        </LinearLayout>

        <!-- Description Section -->
        <!-- Divider line -->
        <View
            android:id="@+id/lineDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="#E0E0E0"
            app:layout_constraintTop_toBottomOf="@id/ratingLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/tvDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:text="@string/description"
            android:textColor="#242424"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingLayout" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/a_cappuccino_is_an_approximately_150_ml_5_oz_beverage_with_25_ml_of_espresso_coffee_and_85ml_of_fresh_milk_the_for"
            android:textColor="#999999"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle" />

        <TextView
            android:id="@+id/tvReadMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/read_more"
            android:textColor="#C67C4E"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <!-- Size Section -->


        <TextView
            android:id="@+id/tvSizeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/size"
            android:textColor="#242424"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReadMore"
            app:layout_goneMarginTop="20dp" />

        <RadioGroup
            android:id="@+id/sizeRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/bottomBarBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSizeTitle"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/rbSmall"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/size_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/s"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rbMedium"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/size_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/m"
                android:textColor="#C67C4E"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rbLarge"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/size_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/l"
                android:textColor="#000000"
                android:textSize="14sp" />
        </RadioGroup>

        <!-- Price Section -->

        <View
            android:id="@+id/bottomBarBackground"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/priceSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_4_53"
                android:textColor="#C67C4E"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBuyNow"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_button"
            android:elevation="0dp"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/buy_now"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/priceSection"
            app:layout_constraintTop_toTopOf="@id/priceSection"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>